force-app/main/default/objects/DMLErrorLog__c/DMLErrorLog__c.object-meta.xml
<CustomObject>
    <label>DML Error Log</label>
    <nameField>
        <displayFormat>DMLE-{000000}</displayFormat>
        <label>DMLErrorLogging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DML Error Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>