force-app/main/default/objects/DMLErrorLog__c/fields/DMLTypes__c.field-meta.xml
<CustomField>
    <fullName>DMLTypes__c</fullName>
    <inlineHelpText>Returns the value of the System.StatusCode enum.</inlineHelpText>
    <label>DML Type(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>