force-app/main/default/objects/DMLErrorLog__c/fields/ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>ErrorLog__c</fullName>
    <label>Error Log</label>
    <referenceTo>ErrorLog__c</referenceTo>
    <relationshipLabel>DML Error Logs</relationshipLabel>
    <relationshipName>DML_Error_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>