force-app/main/default/objects/DMLErrorLog__c/fields/FieldNames__c.field-meta.xml
<CustomField>
    <fullName>FieldNames__c</fullName>
    <label>Field Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>