force-app/main/default/objects/DMLErrorLog__c/fields/IDofFailedRecord__c.field-meta.xml
<CustomField>
    <fullName>IDofFailedRecord__c</fullName>
    <label>ID of Failed Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>