force-app/main/default/objects/DMLErrorLog__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <inlineHelpText>Returns the original row position of the failed row.</inlineHelpText>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>